--- a/zuul.properties
+++ b/zuul.properties
@@ -2,3 +2,5 @@ zuul.routes.c1.path:/cl1/**
 zuul.routes.c1.serviceId:EUREKACLIENT1
 zuul.routes.c2.path:/cl2/**
 zuul.routes.c2.serviceId:EUREKACLIENT2
+zuul.routes.c2.path:/video/**
+zuul.routes.c2.serviceId:VideoApplication
